# Asynchronous-HTTP-Framework-CPP

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  SSL_selfsigned_internet_domain_http.cpp  helper_functions.cpp  internet_domain_http.cpp  main-plain.cpp  main-ssl.cpp  main.cpp  readme  readme.md  routes.conf  server  socket_server_id_ud.cpp  unix_domain.h  unix_domain_client_1.cpp
.clangd/index/: SSL_selfsigned_internet_domain_http.cpp.E7446839A935D13E.idx  helper_functions.cpp.40B0899A35B7A566.idx  unix_domain.h.0014A7D092CC1D61.idx
.github/workflows/: build_run_tests_CI.sh  cmake.yml
CI-scripts/: build_run_tests.php  build_run_tests_CI.sh
ci/: build_run_tests.pl  curl_tests.sh  install_dependency.pl
configs/: gen_bcrypt_hash.php  gen_bcrypt_hash.py  sample_secure_REST_authfile.json  sample_secure_REST_authfile_bcrypt.json
configs/html_src/: file_one.html  index.html
docs/: Generate-Bcrypt-Hash.md  SSL-HTTP-server-GET-POST.md  plain-text-GET-POST.md  plain-text-JSON-CALLBACK-processing.md
examples/: SSL-JSON-CALLBACK-server.cpp  SSL_GET.cpp  SSL_main.cpp  plain-text-JSON-CALLBACK.cpp
html_src/: index.html
libhttpserver/: CMakeLists.txt  HTTPAcceptor.cpp  HTTPAcceptor.hpp  HTTPBasicAuthHandler.cpp  HTTPBasicAuthHandler.hpp  HTTPCommonMessageTemplates.hpp  HTTPConstants.hpp  HTTPHandler.cpp  HTTPHandler.hpp  HTTPHeaders.cpp  HTTPHeaders.hpp  HTTPHelpers.hpp  HTTPLogHelpers.hpp  HTTPMessage.cpp  HTTPMessage.hpp  HTTPParser.cpp  HTTPParser.hpp  HTTPParserRoutine.hpp  HTTPResponder.cpp  HTTPResponder.hpp  HTTPSSLHelpers.hpp  SSL_selfsigned_internet_domain_http.hpp  TCPEndpoint.hpp  base64.hpp  delete.txt  helper_functions.hpp  internet_domain_http.hpp  logger_helpers.hpp  unix_domain.hpp  unix_domain_server.cpp
libhttpserver/internal/: AsyncHelpers.hpp  ConcurrentQueue.hpp  SSLHelpers.hpp
test/: CMakeLists.txt  benchmark-plain-text-http-GET.txt  benchmark-plain-text-http-POST-JSON-CALLBACK.txt  benchmark.txt  internet_domain_post_test.cpp  make.sh  processing_functions_test.cpp  test-HTTPBasicAuthHandler.cpp  test-HTTPCommonMessageTemplates.cpp  test-HTTPHeaders.cpp  test-HTTPMessage.cpp  test-HTTPParser.cpp  test-HTTPParserRoutine.cpp  test-VendorBase64.cpp  test_helper.cpp  test_helper.hpp
test/extern-scripts/: basic-test.php  http-response-code.php
test/internal/: sample_userpass_cred.json  sample_userpass_cred_bcrypt.json
